# libwfa

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  _formulas.tex  ab__matrix_8h_source.html  ab__matrix__test_8h_source.html  ab__object_8h_source.html  ab__vector_8h_source.html  ab__vector__test_8h_source.html  annotated.html  classes.html  classlibwfa_1_1OmDescriptor-members.html  classlibwfa_1_1OmDescriptor.html  classlibwfa_1_1ab__matrix-members.html  classlibwfa_1_1ab__matrix.html  classlibwfa_1_1ab__matrix__test-members.html  classlibwfa_1_1ab__matrix__test.html  classlibwfa_1_1ab__object-members.html  classlibwfa_1_1ab__object.html  classlibwfa_1_1ab__vector-members.html  classlibwfa_1_1ab__vector.html  classlibwfa_1_1ab__vector__test-members.html  classlibwfa_1_1ab__vector__test.html  classlibwfa_1_1compare__ref-members.html  classlibwfa_1_1compare__ref.html  classlibwfa_1_1ctnum__analysis-members.html  classlibwfa_1_1ctnum__analysis.html  classlibwfa_1_1ctnum__analysis__i-members.html  classlibwfa_1_1ctnum__analysis__i.html  classlibwfa_1_1ctnum__analysis__test-members.html  classlibwfa_1_1ctnum__analysis__test.html  classlibwfa_1_1ctnum__export-members.html  classlibwfa_1_1ctnum__export.html  classlibwfa_1_1ctnum__export__test-members.html  classlibwfa_1_1ctnum__export__test.html  classlibwfa_1_1ctnum__printer__i-members.html  classlibwfa_1_1ctnum__printer__i.html  classlibwfa_1_1ctnumbers-members.html  (+319 more)
cmake/: DepsLibWFA.txt  FindArmadillo.cmake  SetupLibWFA.txt
html/: ab__matrix_8h_source.html  ab__matrix__test_8h_source.html  ab__object_8h_source.html  ab__vector_8h_source.html  ab__vector__test_8h_source.html  annotated.html  classes.html  classlibwfa_1_1OmDescriptor-members.html  (+344 more)
latex/: annotated.tex  (+273 more)
libwfa/: CMakeLists.txt  ab_matrix.h  ab_object.h  ab_selector.h  ab_vector.h  analyse_ddm.C  analyse_ddm.h  analyse_esdm.C  analyse_esdm.h  analyse_opdm.C  analyse_opdm.h  analyse_optdm.C  analyse_optdm.h  analyse_sdm.C  analyse_sdm.h  analyse_tdm.C  analyse_tdm.h  atom_list.C  atom_list.h  ctnum_analysis.C  ctnum_analysis.h  ctnum_analysis_i.h  ctnum_data.h  ctnum_data_i.h  ctnum_export.C  ctnum_export.h  ctnum_print_i.h  ctnum_printer_i.h  ctnumbers.C  ctnumbers.h  cube_writer.C  cube_writer.h  density_list.C  density_list.h  density_type.C  density_type.h  dm_list.C  dm_list.h  dm_type.C  dm_type.h  (+69 more)
libwfa/analyses/: ctnum_analysis.C  ctnum_analysis.h  ctnum_analysis_i.h  ctnum_frag.C  ctnum_frag.h  ctnumbers.C  ctnumbers.h  dens_mom.C  dens_mom.h  dyson_analysis.C  dyson_analysis.h  ex_analyse.C  ex_analyse.h  ex_analyse_ad.C  ex_analyse_ad.h  exciton_analysis.C  exciton_analysis.h  exciton_analysis_ad.C  exciton_analysis_ad.h  exciton_analysis_base.C  exciton_analysis_base.h  exciton_moments.h  ndo_analysis.C  ndo_analysis.h  no_analysis.C  no_analysis.h  nto_analysis.C  nto_analysis.h  om_descriptor.C  om_descriptor.h  pop_analysis_ad.C  pop_analysis_ad.h  pop_analysis_dm.C  pop_analysis_dm.h  pop_analysis_i.h  pop_analysis_tdm.C  pop_analysis_tdm.h  pop_data.C  pop_data.h  pop_loewdin.C  (+7 more)
libwfa/core/: ab_matrix.h  ab_object.h  ab_orbital_selector.h  ab_vector.h  constants.C  constants.h  contract.C  contract.h  contract_ad.C  contract_ad.h  contract_ad_i.h  contract_i.h  density_type.C  density_type.h  mom_builder.C  mom_builder.h  mom_builder_i.h  multipol_con.C  multipol_con.h  multipol_con_i.h  orbital_data.C  orbital_data.h  orbital_selector.C  orbital_selector.h  orbital_type.C  orbital_type.h  selector.C  selector.h  transformations_dm.C  transformations_dm.h
libwfa/export/: ctnum_export.C  ctnum_export.h  ctnum_printer_i.h  cube_writer.C  cube_writer.h  density_printer_basic.C  density_printer_basic.h  density_printer_cube.C  density_printer_cube.h  density_printer_i.h  density_printer_nil.h  density_printer_none.h  density_printer_print.C  density_printer_print.h  ev_printer_i.h  ev_printer_ndo.C  ev_printer_ndo.h  ev_printer_no.C  ev_printer_no.h  ev_printer_none.h  ev_printer_nto.C  ev_printer_nto.h  ex_ana_printer.C  ex_ana_printer.h  ex_ana_printer_ad.C  ex_ana_printer_ad.h  exciton_printer.C  exciton_printer.h  exciton_printer_ad.C  exciton_printer_ad.h  exciton_printer_i.h  export_cube_base.C  export_cube_base.h  export_cube_i.h  export_data_cm.h  export_data_cube.C  export_data_cube.h  export_data_i.h  export_data_none.h  export_data_print.C  (+31 more)
libwfa/molcas/: CMakeLists.txt  driver.C  main.C  molcas_export_h5orbs.C  molcas_export_h5orbs.h  molcas_mom_builder.C  molcas_mom_builder.h  molcas_state_analysis.C  molcas_wf_analysis.C  molcas_wf_analysis.h  molcas_wf_analysis_data.C  molcas_wf_analysis_data.h  molcas_wfa_interface.C  orbital_printer_h5.C  orbital_printer_h5.h
libwfa/qchem/: export_cube_qchem.C  export_cube_qchem.h  export_molden_qchem.C  export_molden_qchem.h
tests/: CMakeLists.txt  ab_matrix_test.C  ab_matrix_test.h  ab_orbital_selector_test.C  ab_orbital_selector_test.h  ab_selector_test.C  ab_selector_test.h  ab_vector_test.C  ab_vector_test.h  compare_ref.C  compare_ref.h  ctnum_analysis_test.C  ctnum_analysis_test.h  ctnum_export_test.C  ctnum_export_test.h  ctnumbers_test.C  ctnumbers_test.h  cube_writer_test.C  cube_writer_test.h  density_type.C  density_type_test.C  density_type_test.h  dm_list_test.C  dm_list_test.h  ex_ana_pri_ad_test.C  ex_ana_pri_ad_test.h  ex_ana_pri_test.C  ex_ana_pri_test.h  ex_ana_test.C  ex_ana_test.h  ex_analyse_ad_test.C  ex_analyse_ad_test.h  ex_analyse_test.C  ex_analyse_test.h  exciton_analysis_ad_test.C  exciton_analysis_ad_test.h  exciton_analysis_test.C  exciton_analysis_test.h  exciton_printer_ad_test.C  exciton_printer_ad_test.h  (+74 more)
tests/test00/: c_a  c_b  s
tests/test01/: atdm1_a  atdm1_b  atdm2_a  atdm2_b  b2at  c_a  c_b  ddm1_a  ddm1_b  ddm2_a  ddm2_b  dedm1_a  dedm1_b  dedm2_a  dedm2_b  dm0_a  dm0_b  dm1_a  dm1_b  dm2_a  dm2_b  om1_a  om1_b  om2_a  om2_b  om_lowdin1_b  om_lowdin2_a  s  tdm1_a  tdm1_b  tdm2_a  tdm2_b
tests/test02/: atdm1_a  atdm2_a  c_a  ddm1_a  ddm2_a  dedm1_a  dedm2_a  dm0_a  dm1_a  dm2_a  om1_a  om2_a  om_lowdin1_a  om_lowdin2_a  s  tdm1_a  tdm2_a
(+86 files in other folders)
